@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-11T08:16:52Z",
+  "timestamp" : "2023-07-12T01:14:38Z",
   "count_outdated" : 128,
   "uniques_outdated" : 108,
-  "count" : 148,
-  "uniques" : 123,
+  "count" : 149,
+  "uniques" : 124,
   "clones" : [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -61,12 +61,12 @@
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
