@@ -1,6 +1,6 @@
 {
-  "count": 20,
-  "uniques": 11,
+  "count": 21,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2023-07-01T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
